syntax = "proto3";

package registry;
option go_package = "./proto";


service Registry {
  rpc register (Rinfo) returns (Ranswer) {}
  rpc startGroup (RequestData) returns (MGroup) {}
  rpc ready (RequestData) returns (MGroup) {}
  rpc closeGroup (RequestData) returns (MGroup) {}
  rpc getStatus (MulticastId) returns (MGroup) {}
}

message Rinfo {
  string multicastId = 1;
  uint32 clientPort = 2;
}

message Ranswer {
  string clientId = 1;
  MGroup groupInfo = 2;
}

message MGroup {
  string multicastId = 1;
  Status status = 2;
  uint64 readyMembers = 3;
  map<string, MemberInfo>  members = 4;
}
enum Status {
  OPENING = 0;
  STARTING = 1;
  ACTIVE = 2;
  CLOSING = 3;
  CLOSED = 4;
}
message MulticastId {
  string multicastId = 1;
}

message RequestData {
  string multicastId = 1;
  string mId = 2;
}

message MemberInfo {
  string id = 1;
  string address = 2;
  bool ready = 3;
}

message Empty {

}